build vehicle module